--- a/history.txt
+++ b/history.txt
@@ -8,4 +8,4 @@ Le agrego otra line
 
 I'm tall
 
-Hoy soy Full Stack Developer en una empresa Transnacional
+Hoy soy Full Stack Developer en una empresa Transnacional. Esto es de su vida
