--- a/history.txt
+++ b/history.txt
@@ -11,5 +11,6 @@ Le agrego otra line
 I'm tall
 
 Main 1
+Main 2
 
 Hoy soy Full Stack Developer en una empresa Transnacional. Esto es de su vida y obra maestra.
